infrastructures/OCI/k8s/oauth/oauth2-proxy-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: google-auth
  namespace: traefik
spec:
  forwardAuth:
    address: http://oauth2-proxy.traefik.svc:4180
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
