infrastructures/OCI/k8s/oauth/oauth2-proxy-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: traefik
  labels:
    app: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      nodeSelector:
        workload: light
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:latest
          args:
            - --provider=google
            - --cookie-domain=.oci.santocaruso.eu
            - --whitelist-domain=.oci.santocaruso.eu
            - --email-domain=*
            - --authenticated-emails-file=/config/allowed-emails.txt
            - --reverse-proxy=true
            - --set-xauthrequest=true
            - --upstream=static://202
            - --redirect-url=https://auth.oci.santocaruso.eu/oauth2/callback
            - --http-address=0.0.0.0:4180
          ports:
            - containerPort: 4180
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 32Mi
          volumeMounts:
            - name: emails
              mountPath: /config
              readOnly: true
      volumes:
        - name: emails
          configMap:
            name: oauth2-proxy-emails
