infrastructures/OCI/k8s/oauth/oauth2-proxy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: traefik
  labels:
    app: oauth2-proxy
spec:
  selector:
    app: oauth2-proxy
  ports:
    - name: http
      port: 4180
      targetPort: 4180
