infrastructures/OCI/k8s/oauth/oauth2-proxy-auth-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oauth2-proxy-auth-domain
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.oci.santocaruso.eu`)
      kind: Rule
      services:
        - name: oauth2-proxy
          port: 4180
  tls:
    certResolver: letsencrypt
