infrastructures/OCI/k8s/oauth/oauth2-proxy-catchall-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oauth2-proxy-catchall
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/oauth2/`)
      kind: Rule
      priority: 1000
      services:
        - name: oauth2-proxy
          port: 4180
  tls:
    certResolver: letsencrypt
